testdata/golden/sema/invalid/attrs_sealed_extend/only.sg
// Test: cannot extend @sealed type

@sealed
type Base = {
    x: int
}

// This should fail with SEM3074
type Derived = Base : {
    y: int
}
